// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> on SSR should work with multiple images in SSR node environment 1`] = `
"<div class=\\" gatsby-background-image-fwatluf_depr gatsby-image-wrapper\\" style=\\"position:relative;opacity:0.99;display:inline-block;background-position:center;background-repeat:no-repeat;background-size:cover\\" data-reactroot=\\"\\"><style>
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            background-image: url(string_of_base64),url(string_of_base64);
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64),url(string_of_base64);
            
            
          }
        </style><noscript><style>
          .gatsby-background-image-fwatluf_depr:before {
            opacity: 1;
            background-image: url('test_fixed_image.jpg'),url('test_fixed_image.jpg');
          }</style></noscript><h1>testempty</h1></div>"
`;

exports[`<BackgroundImage /> on SSR should work within SSR node environment 1`] = `
"<div class=\\" gatsby-background-image-fwatluf_depr gatsby-image-wrapper\\" style=\\"position:relative;opacity:0.99;background-position:center;background-repeat:no-repeat;background-size:cover\\" data-reactroot=\\"\\"><style>
          .gatsby-background-image-fwatluf_depr:before,
          .gatsby-background-image-fwatluf_depr:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gatsby-background-image-fwatluf_depr:before {
            z-index: -100;
            
            background-image: url(string_of_base64);
            opacity: 0; 
          }
          .gatsby-background-image-fwatluf_depr:after {
            z-index: -101;
            background-image: url(string_of_base64);
            
            
          }
        </style><noscript><style>
          .gatsby-background-image-fwatluf_depr:before {
            opacity: 1;
            background-image: url('test_fluid_image.jpg');
          }</style></noscript><h1>testempty</h1></div>"
`;
